tests/bad/lexer1.oc
/// fail: Unexpected token

def main() {
    let x: i32 = bool
}
